# self-study

./: Pipfile  README.md  bigo.norg  pyproject.toml
algorithms/: binary_search.py  sliding_window.py  utils.py
big-o/: bigo.org
challanges/: longest_substring.py  move_zeros.py  save_people.py  valid_mountain.py  water_container.py
