[tool.poetry]
name = "self-study"
version = "0.1.0"
description = ""
authors = ["Dhruvin Shah <dhruvin3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pylint = "^2.13.5"
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]

[tool.pylint.BASIC]
good-names = ["_", "i", "j", "k", "m", "n", "s", "x", "y", "el"]
